--- a/force-app/main/default/classes/ResourceStudyRelatedService.cls
+++ b/force-app/main/default/classes/ResourceStudyRelatedService.cls
@@ -15,9 +15,13 @@ public virtual inherited sharing class ResourceStudyRelatedService extends Resou
             'Resource__c'
     };
     
-    protected override Boolean initResourcesIds() {
+    public static ResourceStudyRelatedService getInstance(){
+        return (ResourceStudyRelatedService) ClassFactory.newInstance(ResourceStudyRelatedService.class);
+    }
+    
+    protected virtual override List<Id> getResourcesIds() {
         //Create filter for query:
-        String filter = DatabaseService.fieldEqual('Resource__r.RecordType.DeveloperName', resourceType);
+        String filter = DatabaseService.fieldEqual('Resource__r.RecordType.DeveloperName', rService.getResourceType());
         if(contentClass != null) filter += ' AND ' + DatabaseService.fieldEqual('Resource__r.Content_Class__c', contentClass);
         if(resourceId != null) {
             filter += ' AND ' + DatabaseService.fieldEqual('Resource__c', resourceId);
@@ -25,11 +29,12 @@ public virtual inherited sharing class ResourceStudyRelatedService extends Resou
             filter += ' AND ' + DatabaseService.fieldEqual('Clinical_Trial_Profile__c', pState.ctp.Id);
         }
         //Get Res Study records and filters result resource Ids
+        List<Id> resourcesIds = new List<Id>();
         List<Res_study__c> resStudies = (List<Res_study__c>) DatabaseService.query(RES_STUDY_FIELDS, Res_study__c.getSObjectType(), filter);
         for (Res_study__c resStudy : resStudies) {
-            if(StudyResourceVisibilityService.isResourceVisibleForPE(resStudy, pState.pe, pState.isDelegate)) this.resourcesIds.add(resStudy.Resource__c);
+            if(resourceId != null || StudyResourceVisibilityService.isResourceVisibleForPE(resStudy, pState.pe, pState.isDelegate)) resourcesIds.add(resStudy.Resource__c);
         }
-        return !(this.resourcesIds == null || this.resourcesIds.isEmpty());
+        return resourcesIds;
     }
     
     protected override ResourceService.ResourceWrapperContainer getErrorNoObjectsToFilter() {
@@ -37,6 +42,6 @@ public virtual inherited sharing class ResourceStudyRelatedService extends Resou
     }
     
     protected override Boolean isObjectsToFilterMissing() {
-        return (this.pState.ctp == null || this.pState.value == ParticipantService.ParticipantStates.ALUMNI);
+        return (resourceId == null && pState.value == ParticipantService.ParticipantStates.ALUMNI);
     }
 }
