Fixed limit exception for travel support and fix view coutry when page is reloaded

--- a/force-app/main/default/classes/TravelSupportHelper.cls
+++ b/force-app/main/default/classes/TravelSupportHelper.cls
@@ -19,7 +19,7 @@ public without sharing class TravelSupportHelper {
                 'Site__r.BillingCountry, ' +
                 'Site__r.BillingCountryCode, ' +
                 'Study_Site_Number__c, ' +
-                '(SELECT Id, isEnable__c, Is_Manual__c, TravelVendor__r.Name, TravelVendor__r.Default_Country__c, TravelVendor__r.Link_Vendor__c, Study_Site__c FROM TravelVendorSettings__r' + (String.isBlank(clauseChild) ? '' : clauseChild) + ') ' +
+                '(SELECT Id, isEnable__c, By_Country__c, Is_Manual__c, TravelVendor__r.Name, TravelVendor__r.Default_Country__c, TravelVendor__r.Link_Vendor__c, Study_Site__c, Study_Site__r.Site__r.BillingCountryCode FROM TravelVendorSettings__r' + (String.isBlank(clauseChild) ? '' : clauseChild) + ') ' +
                 'FROM Study_Site__c ';
         String clause = ' WHERE Clinical_Trial_Profile__c = \'' + ctpId + '\' ';
         if (isCountryCodes) {
@@ -56,7 +56,7 @@ public without sharing class TravelSupportHelper {
                 'Site__r.BillingCountry, ' +
                 'Site__r.BillingCountryCode, ' +
                 'Study_Site_Number__c, ' +
-                '(SELECT Id, isEnable__c, Is_Manual__c, TravelVendor__r.Name, TravelVendor__r.Default_Country__c, TravelVendor__r.Link_Vendor__c, Study_Site__c FROM TravelVendorSettings__r' + (String.isBlank(clauseChild) ? '' : clauseChild) + ') ' +
+                '(SELECT Id, isEnable__c, By_Country__c, Is_Manual__c, TravelVendor__r.Name, TravelVendor__r.Default_Country__c, TravelVendor__r.Link_Vendor__c, Study_Site__c, Study_Site__r.Site__r.BillingCountryCode FROM TravelVendorSettings__r' + (String.isBlank(clauseChild) ? '' : clauseChild) + ') ' +
                 'FROM Study_Site__c ';
         String clause = ' WHERE Clinical_Trial_Profile__c = \'' + ctpId + '\' ';
         String order = ' ORDER BY Name';
@@ -71,20 +71,6 @@ public without sharing class TravelSupportHelper {
                 vendorItems.add(vendorItem);
         }
         return vendorItems;
-    }
-
-    public List<TravelVendor__c> getTravelVendorsByIds(List<Id> travelVendorIds) {
-        DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
-        String query = 'SELECT Id, ' +
-                'Name, ' +
-                'Link_Vendor__c ' +
-                'FROM TravelVendor__c ';
-        String clause = 'WHERE Id IN ' + '(\'' + String.join(travelVendorIds, '\',\'') + '\')';
-        String order = ' ORDER BY Id';
-        query += clause;
-        query += order;
-        List<TravelVendor__c> travelVendors = databaseProxy.query(query);
-        return travelVendors;
     }
 
     public void fillVendorSettingsWithStub(List<Id> travelVendorIds, List<TravelVendorPanelRemote.VendorItem> vendorItemsResult) {
@@ -104,7 +90,8 @@ public without sharing class TravelSupportHelper {
                             new TravelVendorSettings__c (
                                     isEnable__c = false,
                                     TravelVendor__c = vendorId,
-                                    Study_Site__c = vendorItem.studySite.Id
+                                    Study_Site__c = vendorItem.studySite.Id,
+                                    Study_Site__r = vendorItem.studySite
                             )
                     );
                 }
@@ -130,7 +117,8 @@ public without sharing class TravelSupportHelper {
                     'TravelVendor__c, ' +
                     'TravelVendor__r.Name, ' +
                     'TravelVendor__r.Link_Vendor__c, ' +
-                    'TravelVendor__r.Disclosure__c ' +
+                    'TravelVendor__r.Disclosure__c, ' +
+                    'tudy_Site__r.Site__r.BillingCountryCode' +
                     'FROM TravelVendorSettings__c '+
                     'WHERE Study_Site__c =  \'' + studySiteId + '\' ' +
                     'AND isEnable__c = ' + true;
